--- a/src/assets/html/index.html
+++ b/src/assets/html/index.html
@@ -5,34 +5,14 @@
     <body>
         <p>TESTES</p>
         <canvas id="oscilloscope"></canvas>
-        <audio autoplay controls>
-            <source src="https://cast.animu.com.br:9079/stream" type="audio/mpeg">
-        </audio>
         <script>
-            // Function to set up the audio context and start audio playback
-            function setupAudioContext() {
-                console.log("teste2");
-                const url = "https://cast.animu.com.br:9079/stream";
-                // Set up the Web Audio API with the audio stream from the provided URL
-                window.audioContext = new (window.AudioContext || window.webkitAudioContext);
+            let isMuted = false;
+            let visualizerGain;
+            var analyser;
 
-                const audioContext = new (window.AudioContext || window.webkitAudioContext)();
-                const masterGain = audioContext.createGain();
-                let audioStream;
-                window.audioContext.resume();
-                window.masterGain = audioContext.createGain();
-                window.masterGain.connect(audioContext.destination);
-
-                song = new Audio(url);
-                var songSource = audioContext.createMediaElementSource(song);
-                song.crossOrigin = "anonymous";
-                songSource.connect(masterGain);
-                songSource.autoplay = true; // add this
-                songSource.mediaElement.autoplay = true; // add this
-
-                const analyser = audioContext.createAnalyser();
+            function setupVisualfluff(x) {
+                analyser = audioContext.createAnalyser();
                 masterGain.connect(analyser);
-                console.log("teste");
 
                 const waveform = new Float32Array(analyser.frequencyBinCount);
                 analyser.getFloatTimeDomainData(waveform);
@@ -69,18 +49,59 @@
                     scopeContext.lineWidth = 3;
                     scopeContext.stroke();
                 }
-                drawOscilloscope();
-                updateWaveForm();
-                window.hasOsci = true;
 
+                if (x == "hide") {
+                    const scopeCanvas = document.getElementById("oscilloscope");
+                    scopeCanvas.width = 0;
+                    scopeCanvas.height = 0;
+                    return;
+                } else {
+                    drawOscilloscope();
+                    updateWaveForm();
+                    window.hasOsci = true;
+                }
             }
 
-            window.onload = () => {
-                setupAudioContext();
-            } 
-            // Add an event listener for a user gesture (e.g., click)
-        </script>
-        <button id="teste" onclick="setupAudioContext()">Play</button>
+            function toggleMute() {
+                const gainValue = isMuted ? 1 : 0;
+                masterGain.gain.value = gainValue;
+                isMuted = !isMuted;
+            }
 
+            function startplayer() {
+                window.audioContext = new (window.AudioContext || window.webkitAudioContext);
+                document.addEventListener('touchend', ()=>window.audioContext.resume());
+                window.audioContext.resume();
+                window.masterGain = audioContext.createGain();
+                window.masterGain.connect(audioContext.destination);
+                if (!window.hasOsci) {
+                    setupVisualfluff();
+                } else {
+                    console.log("wario land 4, play it.");
+                }
+                const url = "https://cast.animu.com.br:9079/stream";
+                song = new Audio(url);
+                var songSource = audioContext.createMediaElementSource(song);
+                songSource.muted = true;
+                song.crossOrigin = "anonymous";
+                var gainNode = audioContext.createGain();
+                songSource.connect(masterGain);
+                song.preload = "none";
+                var gainfrac = 0;
+                if (window.masterGain) window.masterGain.gain.value = 1;
+                window.song_result = song.play();
+                window.songPlaying = true;
+
+                  // Connect the visualizer gain at the end of the startplayer function
+                visualizerGain = audioContext.createGain();
+                analyser.connect(visualizerGain);
+                visualizerGain.connect(audioContext.destination);
+            }
+
+            startplayer();
+        </script>
+        <button id="teste" onclick="startplayer()">Play</button>
+        <button onclick="toggleMute()">Mute/Unmute</button>
     </body>
 </html>
+
